# Medium

./: README.md  Untitled.ipynb  gcd.ipynb
DGN/: DGN.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  video.txt
EVA/: EVA.ipynb
FematFatoring/: Femat-Factorization.ipynb
GD/: Basice_concept.ipynb
Imbalance/: Imbalabce.txt  catalogue.csv
MaxEnt-Model/: Entropy.ipynb
Metrix/: Untitled.ipynb
Montecarlo/: MC.ipynb  MC_python.ipynb  Untitled1.ipynb  stable_coin_27days.csv
RCT/: ate.ipynb
RIE/: Untitled.ipynb  Untitled1.ipynb
YouTube-Summarize/: Untitled1.ipynb
ann-matrix/: .$ann.drawio.bkp  .$ann.drawio.dtmp  Neural-Net-In-The-Matrix.ipynb  ann.drawio
bayes-theorem/: .$drawing.drawio.bkp  .$monte-hall.drawio.bkp  bayes.ipynb  drawing.drawio  monte-hall.drawio  monte-hall.ipynb
berseon-paradox/: berkson.ipynb
black-swan/: pareto.ipynb  st_petersburg.ipynb
bootstrapping/: Medium-Bootstrapping.ipynb  bootstrapping.ipynb  somthing.ipynb
causal-impact/: thai-stock-causal-impact.ipynb  thailand_stocks.txt
cellular-automata-forest-fire-model/: Cellular-Automata-2.ipynb
cppi/: cppi2.ipynb
cvnns/: Complex-ELM.ipynb
fastapi-app/: main.py  train-model.ipynb  ui.py
fibonacci/: fibo.ipynb  linear-iteraive-systems.ipynb
fractals/: Untitled.ipynb  Untitled1.ipynb
game/: Untitled.ipynb
game-theory/: war-game.ipynb
gradio/: CNN-MNIST.ipynb  app.py  loaded_model.py  mnist_model.pt
hot-spot/: data.csv
kelly/: Untitled.ipynb  (+2 more)
mlops/my_simple_project/: pyproject.toml
(+111 files in other folders)
