[tool.poetry]
name = "my-simple-project"
version = "0.1.0"
description = ""
authors = ["ornlyp63 <takezocmu@gmail.com>"]
readme = "README.md"
packages = [{include = "my_simple_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
